--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.2.37"
   },
   "browserslist": [
     "> 1%",
